<resources>
    <string name="app_name">MiniCarbon</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have Account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">sign up</string>
    <string name="confirm_password">confirm password</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_report">Report</string>
    <string name="add_journey">Add Journey</string>
    <string name="let_s_track_your_carbon_footprint">Let\'s track your carbon footprint</string>
    <string name="Transportation">Transportation</string>
    <string name="food">Food</string>
    <string name="electricity">Electricity</string>
    <string name="waste">Waste</string>
    <string name="already_have_account">Already have account?</string>
    <string name="type">Type</string>
</resources>