<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".ui.calculate.CalculateFragment">

    <TextView
        android:id="@+id/title_add_journey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_journey"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/opensans"
        android:textColor="@color/green"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/subtitle_carbon_tracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_track_your_carbon_footprint"
        android:textSize="14sp"
        android:fontFamily="@font/opensans"
        android:textColor="@color/green"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/title_add_journey"
        app:layout_constraintStart_toStartOf="@id/title_add_journey"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="23dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_carbon_tracking">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:columnCount="4"
            android:padding="16dp"
            android:useDefaultMargins="true">

            <!-- Transportation Button -->
            <LinearLayout
                android:id="@+id/btn_transportation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_background_selector"
                    android:backgroundTint="@color/yellow"
                    android:contentDescription="@string/Transportation"
                    android:padding="16dp"
                    android:src="@drawable/icon_transportation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/Transportation"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Food Button -->
            <LinearLayout
                android:id="@+id/btn_food"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_background_selector"
                    android:backgroundTint="@color/light_green"
                    android:contentDescription="@string/food"
                    android:padding="16dp"
                    android:src="@drawable/icon_food" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/food"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <!-- Electricity Button -->
            <LinearLayout
                android:id="@+id/btn_electricity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_background_selector"
                    android:backgroundTint="@color/light_green"
                    android:contentDescription="@string/electricity"
                    android:padding="16dp"
                    android:src="@drawable/icon_electricity" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/electricity"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <!-- Waste Button -->
            <LinearLayout
                android:id="@+id/btn_waste"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageButton
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_background_selector"
                    android:backgroundTint="@color/light_green"
                    android:contentDescription="@string/waste"
                    android:padding="16dp"
                    android:src="@drawable/icon_waste" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/waste"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>

        </GridLayout>
    </androidx.cardview.widget.CardView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container" />

</androidx.constraintlayout.widget.ConstraintLayout>